--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ generate_feeds = true
 # The filenames to use for the feeds. Used as the template filenames, too.
 # Defaults to ["atom.xml"], which has a built-in template that renders an Atom 1.0 feed.
 # There is also a built-in template "rss.xml" that renders an RSS 2.0 feed.
-feed_filenames = ["atom.xml"]
+feed_filenames = ["atom.xml","rss.xml"]
 
 # The taxonomies to be rendered for the site and their configuration of the default languages
 # Example:
